--- a/CheatSheets/TEC-Git-CheatSheet.html
+++ b/CheatSheets/TEC-Git-CheatSheet.html
@@ -12,7 +12,7 @@
 <meta name="author" content="William FitzPatrick" />
 
 
-<title>The Engineer’s Corner - GIT CheatSheet</title>
+<title>The Software Engineer’s Corner - GIT Porcelain CheatSheet</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -1509,7 +1509,8 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">The Engineer’s Corner - GIT CheatSheet</h1>
+<h1 class="title toc-ignore">The Software Engineer’s Corner - GIT
+Porcelain CheatSheet</h1>
 <h4 class="author">William FitzPatrick</h4>
 <h4 class="date">Aug 04 2022</h4>
 
@@ -1654,8 +1655,16 @@ details</td>
 <td>TBD</td>
 </tr>
 <tr class="odd">
+<td>git diff</td>
+<td>TBD</td>
+</tr>
+<tr class="even">
+<td>git diff –cached</td>
+<td>TBD</td>
+</tr>
+<tr class="odd">
 <td>git diff [source branch] [target branch]</td>
-<td>Preview changes before merging</td>
+<td>TBD</td>
 </tr>
 <tr class="even">
 <td>git checkout [commitid]</td>
