--- a/CheatSheets/TEC-Git-CheatSheet.html
+++ b/CheatSheets/TEC-Git-CheatSheet.html
@@ -9,10 +9,10 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="William FitzPatrick" />
+<meta name="author" content="The Software Engineer’s Corner" />
 
 
-<title>The Software Engineer’s Corner - GIT Porcelain CheatSheet</title>
+<title>GIT Porcelain CheatSheet</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -1509,9 +1509,8 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">The Software Engineer’s Corner - GIT
-Porcelain CheatSheet</h1>
-<h4 class="author">William FitzPatrick</h4>
+<h1 class="title toc-ignore">GIT Porcelain CheatSheet</h1>
+<h4 class="author">The Software Engineer’s Corner</h4>
 <h4 class="date">Aug 08 2022</h4>
 
 </div>
