--- a/CheatSheets/TEC-Git-CheatSheet.html
+++ b/CheatSheets/TEC-Git-CheatSheet.html
@@ -1511,7 +1511,7 @@ div.tocify {
 
 <h1 class="title toc-ignore">GIT CheatSheet</h1>
 <h4 class="author">The Software Engineer’s Corner</h4>
-<h4 class="date">Aug 08 2022</h4>
+<h4 class="date">Aug 12 2022</h4>
 
 </div>
 
@@ -1631,39 +1631,42 @@ details</td>
 </tr>
 <tr class="odd">
 <td>git log</td>
-<td>View changes</td>
+<td>Display changes</td>
 </tr>
 <tr class="even">
 <td>git log –stat</td>
-<td>View changes with extra information about altered files</td>
+<td>Display changes with extra information about altered files</td>
 </tr>
 <tr class="odd">
 <td>git log –summary</td>
-<td>View changes (detailed)</td>
+<td>Display changes (detailed)</td>
 </tr>
 <tr class="even">
 <td>git log –oneline</td>
-<td>View changes (briefly)</td>
+<td>Display changes (briefly)</td>
 </tr>
 <tr class="odd">
 <td>git log master..origin/master –stat</td>
-<td>TBD</td>
+<td>Display commit differences between master and origin/master</td>
 </tr>
 <tr class="even">
 <td>git log origin/master..master –stat</td>
-<td>TBD</td>
+<td>Display commit differences between origin/master and master</td>
 </tr>
 <tr class="odd">
 <td>git diff</td>
-<td>TBD</td>
+<td>Display detailed differences between committed and non-committed
+changes</td>
 </tr>
 <tr class="even">
 <td>git diff –cached</td>
-<td>TBD</td>
+<td>Display detailed differences between staged files and the most
+recent commit</td>
 </tr>
 <tr class="odd">
 <td>git diff [source branch] [target branch]</td>
-<td>TBD</td>
+<td>Display detailed differences between [source branch] [target
+branch]</td>
 </tr>
 <tr class="even">
 <td>git checkout [commitid]</td>
