--- a/CheatSheets/TEC-Git-CheatSheet.html
+++ b/CheatSheets/TEC-Git-CheatSheet.html
@@ -1511,7 +1511,7 @@ div.tocify {
 
 <h1 class="title toc-ignore">GIT CheatSheet</h1>
 <h4 class="author">The Software Engineer’s Corner</h4>
-<h4 class="date">Aug 17 2022</h4>
+<h4 class="date">Aug 18 2022</h4>
 
 </div>
 
@@ -2113,9 +2113,8 @@ working tree before they are committed. Most commonly referred to as the
 staging area.</p>
 <p><strong>Merge</strong>: Joining two or more commit histories.</p>
 <p><strong>Ref</strong>: A SHA1 reference to an object name or another
-ref (the latter is called a symbolic ref). For convenience, a ref can
-sometimes be abbreviated when used as an argument to a Git command; see
-gitrevisions[7] for details. Refs are stored in the repository.</p>
+ref. A ref can be abbreviated when used as an argument to a Git command.
+Refs are stored in the repository.</p>
 <p><strong>Tag</strong>: An object containing a ref pointing to another
 object, which can contain a message just like a commit object. It can
 also contain a (PGP) signature, in which case it is called a “signed tag
