TEC-Git-CheatSheet - Update merge commands

--- a/CheatSheets/TEC-Git-CheatSheet.html
+++ b/CheatSheets/TEC-Git-CheatSheet.html
@@ -1859,11 +1859,11 @@ dir changes</td>
 <tbody>
 <tr class="odd">
 <td>git merge [branch name]</td>
-<td>Merge a branch into the active branch</td>
+<td>Merge [branch name] into the current branch</td>
 </tr>
 <tr class="even">
 <td>git merge [source branch] [target branch]</td>
-<td>Merge a branch into a target branch</td>
+<td>Merge [source branch] into [target branch]</td>
 </tr>
 <tr class="odd">
 <td>git merge –ff-only</td>
@@ -1889,11 +1889,11 @@ operation</td>
 <tbody>
 <tr class="odd">
 <td>git rebase [branch name]</td>
-<td>Move the current branches commits to the tip of [branch name]</td>
+<td>Move the current branch commits to the tip of [branch name]</td>
 </tr>
 <tr class="even">
 <td>git rebase [commitid]</td>
-<td>Move the current branches commits to the tip of [commitid]</td>
+<td>Move the current branch commits to the tip of [commitid]</td>
 </tr>
 <tr class="odd">
 <td>git rebase -i [new base]</td>
