TEC-Git-Cheatsheet - update switch command

--- a/CheatSheets/TEC-Git-CheatSheet.html
+++ b/CheatSheets/TEC-Git-CheatSheet.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<! temporary -->
+
 <html>
 
 <head>
@@ -1511,7 +1511,7 @@ div.tocify {
 
 <h1 class="title toc-ignore">GIT CheatSheet</h1>
 <h4 class="author">The Software Engineer’s Corner</h4>
-<h4 class="date">Aug 18 2022</h4>
+<h4 class="date">Aug 23 2022</h4>
 
 </div>
 
@@ -1837,8 +1837,8 @@ local repo</td>
 </tr>
 <tr class="even">
 <td>git switch [branch name]</td>
-<td>Set working directory and HEAD to [branch name], preserve working
-dir changes</td>
+<td>Set working directory and HEAD to [branch name], preserve current
+branch working dir changes</td>
 </tr>
 </tbody>
 </table>
