TEC-Git-CheatSheet - Update merge command syntax

--- a/CheatSheets/TEC-Git-CheatSheet.html
+++ b/CheatSheets/TEC-Git-CheatSheet.html
@@ -1511,7 +1511,7 @@ div.tocify {
 
 <h1 class="title toc-ignore">GIT CheatSheet</h1>
 <h4 class="author">The Software Engineer’s Corner</h4>
-<h4 class="date">Aug 23 2022</h4>
+<h4 class="date">Aug 24 2022</h4>
 
 </div>
 
@@ -1519,7 +1519,8 @@ div.tocify {
 <div id="introduction" class="section level1">
 <h1>Introduction</h1>
 <ul>
-<li>I list many of the most common Git porcelain commands below</li>
+<li>I list many of the most common Git porcelain and plumbing commands
+below</li>
 <li>To maximize effectiveness of these commands, add them to your
 .gitconfig Alias list</li>
 </ul>
@@ -1531,8 +1532,8 @@ div.tocify {
 <h2>Creates and Clones</h2>
 <table>
 <colgroup>
-<col width="40%" />
-<col width="59%" />
+<col width="41%" />
+<col width="58%" />
 </colgroup>
 <thead>
 <tr class="header">
@@ -1560,8 +1561,8 @@ div.tocify {
 <h2>Adds and Removes</h2>
 <table>
 <colgroup>
-<col width="40%" />
-<col width="59%" />
+<col width="41%" />
+<col width="58%" />
 </colgroup>
 <thead>
 <tr class="header">
@@ -1612,8 +1613,8 @@ files alone</td>
 <h2>Audits and Analyses</h2>
 <table>
 <colgroup>
-<col width="40%" />
-<col width="59%" />
+<col width="41%" />
+<col width="58%" />
 </colgroup>
 <thead>
 <tr class="header">
@@ -1685,8 +1686,8 @@ branch]</td>
 <h2>Undos and Restores</h2>
 <table>
 <colgroup>
-<col width="40%" />
-<col width="59%" />
+<col width="41%" />
+<col width="58%" />
 </colgroup>
 <thead>
 <tr class="header">
@@ -1731,8 +1732,8 @@ directory</td>
 <h2>Synchronizes</h2>
 <table>
 <colgroup>
-<col width="40%" />
-<col width="59%" />
+<col width="41%" />
+<col width="58%" />
 </colgroup>
 <thead>
 <tr class="header">
@@ -1781,8 +1782,8 @@ local repo</td>
 <h2>Branches</h2>
 <table>
 <colgroup>
-<col width="40%" />
-<col width="59%" />
+<col width="41%" />
+<col width="58%" />
 </colgroup>
 <thead>
 <tr class="header">
@@ -1847,8 +1848,8 @@ branch working dir changes</td>
 <h2>Merges</h2>
 <table>
 <colgroup>
-<col width="40%" />
-<col width="59%" />
+<col width="41%" />
+<col width="58%" />
 </colgroup>
 <thead>
 <tr class="header">
@@ -1862,8 +1863,9 @@ branch working dir changes</td>
 <td>Merge [branch name] into the current branch</td>
 </tr>
 <tr class="even">
-<td>git merge [source branch] [target branch]</td>
-<td>Merge [source branch] into [target branch]</td>
+<td>git merge [source branch] [target branch] –ff-only</td>
+<td>Merge [source branch] into [target branch], fast forward merges
+only</td>
 </tr>
 <tr class="odd">
 <td>git merge –ff-only</td>
@@ -1877,8 +1879,8 @@ operation</td>
 <h2>Rebases</h2>
 <table>
 <colgroup>
-<col width="40%" />
-<col width="59%" />
+<col width="41%" />
+<col width="58%" />
 </colgroup>
 <thead>
 <tr class="header">
@@ -1915,8 +1917,8 @@ branch</td>
 <h2>Remotes</h2>
 <table>
 <colgroup>
-<col width="40%" />
-<col width="59%" />
+<col width="41%" />
+<col width="58%" />
 </colgroup>
 <thead>
 <tr class="header">
@@ -1940,8 +1942,8 @@ branch</td>
 <h2>Patches</h2>
 <table>
 <colgroup>
-<col width="40%" />
-<col width="59%" />
+<col width="41%" />
+<col width="58%" />
 </colgroup>
 <thead>
 <tr class="header">
@@ -1970,8 +1972,8 @@ branch</td>
 <h2>Backups</h2>
 <table>
 <colgroup>
-<col width="40%" />
-<col width="59%" />
+<col width="41%" />
+<col width="58%" />
 </colgroup>
 <thead>
 <tr class="header">
@@ -2010,8 +2012,8 @@ commit</td>
 <h2>Configures</h2>
 <table>
 <colgroup>
-<col width="40%" />
-<col width="59%" />
+<col width="41%" />
+<col width="58%" />
 </colgroup>
 <thead>
 <tr class="header">
@@ -2039,8 +2041,8 @@ commit</td>
 <h2>Plumbing</h2>
 <table>
 <colgroup>
-<col width="40%" />
-<col width="59%" />
+<col width="41%" />
+<col width="58%" />
 </colgroup>
 <thead>
 <tr class="header">
