--- a/CheatSheets/TEC-Git-CheatSheet.html
+++ b/CheatSheets/TEC-Git-CheatSheet.html
@@ -1511,7 +1511,7 @@ div.tocify {
 
 <h1 class="title toc-ignore">GIT CheatSheet</h1>
 <h4 class="author">The Software Engineer’s Corner</h4>
-<h4 class="date">Aug 26 2022</h4>
+<h4 class="date">Aug 27 2022</h4>
 
 </div>
 
@@ -1774,6 +1774,11 @@ local repo</td>
 <tr class="even">
 <td>git push origin –delete [branch name]</td>
 <td>Delete a remote branch</td>
+</tr>
+<tr class="odd">
+<td>git push –force [remote] [branch]</td>
+<td>Push local changes to remote branch, overwrite remote history -
+DANGEROUS</td>
 </tr>
 </tbody>
 </table>
